Upgrade Angular 19 to 20.2.14 and fix all vulnerabilities
- Upgraded Angular from 19.2.4 to 20.2.14
- Updated NgRx to 18.1.0 for Angular 20 compatibility
- Upgraded Taiga UI to 4.66.0
- Added missing dependencies: @maskito/* 3.x, @ng-web-apis/*, libphonenumber-js
- Updated Angular CLI and build tools to 20.2.14
- Fixed all 23 security vulnerabilities (0 vulnerabilities found)
- Updated zone.js, http-proxy-middleware, axios, ngx-device-detector, ngx-ellipsis

--- a/package.json
+++ b/package.json
@@ -13,33 +13,46 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.4",
-    "@angular/cdk": "^19.2.7",
-    "@angular/common": "^19.2.4",
-    "@angular/compiler": "^19.2.4",
-    "@angular/core": "^19.2.4",
-    "@angular/forms": "^19.2.4",
-    "@angular/platform-browser": "^19.2.4",
-    "@angular/platform-browser-dynamic": "^19.2.4",
-    "@angular/router": "^19.2.4",
-    "@ngrx/effects": "^19.0.1",
-    "@ngrx/router-store": "^19.0.1",
-    "@ngrx/store": "^19.0.1",
-    "@ngrx/store-devtools": "^19.0.1",
-    "@taiga-ui/addon-mobile": "^4.30.0",
-    "@taiga-ui/addon-table": "^4.30.0",
-    "@taiga-ui/cdk": "^4.30.0",
-    "@taiga-ui/core": "^4.30.0",
-    "@taiga-ui/event-plugins": "^4.5.0",
-    "@taiga-ui/icons": "^4.30.0",
-    "@taiga-ui/kit": "^4.30.0",
-    "@taiga-ui/layout": "4.30.0",
-    "@taiga-ui/legacy": "4.30.0",
-    "@taiga-ui/styles": "^4.30.0",
-    "axios": "^1.8.4",
-    "http-proxy-middleware": "^3.0.3",
-    "ngx-device-detector": "^9.0.0",
-    "ngx-ellipsis": "^5.0.2",
+    "@angular/animations": "^20.2.14",
+    "@angular/cdk": "^20.2.14",
+    "@angular/common": "^20.2.14",
+    "@angular/compiler": "^20.2.14",
+    "@angular/core": "^20.2.14",
+    "@angular/forms": "^20.2.14",
+    "@angular/platform-browser": "^20.2.14",
+    "@angular/platform-browser-dynamic": "^20.2.14",
+    "@angular/router": "^20.2.14",
+    "@ngrx/effects": "^18.1.0",
+    "@ngrx/router-store": "^18.1.0",
+    "@ngrx/store": "^18.1.0",
+    "@ngrx/store-devtools": "^18.1.0",
+    "@taiga-ui/addon-mobile": "^4.66.0",
+    "@taiga-ui/addon-table": "^4.66.0",
+    "@taiga-ui/cdk": "^4.66.0",
+    "@taiga-ui/core": "^4.66.0",
+    "@taiga-ui/event-plugins": "^4.7.0",
+    "@taiga-ui/icons": "^4.66.0",
+    "@taiga-ui/kit": "^4.66.0",
+    "@taiga-ui/layout": "4.66.0",
+    "@taiga-ui/legacy": "4.66.0",
+    "@taiga-ui/styles": "^4.66.0",
+    "@taiga-ui/i18n": "^4.66.0",
+    "@taiga-ui/polymorpheus": "^4.9.0",
+    "@ng-web-apis/common": "^4.14.0",
+    "@ng-web-apis/platform": "^4.14.0",
+    "@ng-web-apis/mutation-observer": "^4.14.0",
+    "@ng-web-apis/intersection-observer": "^4.14.0",
+    "@ng-web-apis/resize-observer": "^4.14.0",
+    "@ng-web-apis/screen-orientation": "^4.14.0",
+    "@maskito/core": "^3.11.1",
+    "@maskito/kit": "^3.11.1",
+    "@maskito/angular": "^3.11.1",
+    "@maskito/phone": "^3.11.1",
+    "libphonenumber-js": "^1.12.33",
+    "axios": "^1.11.1",
+    "http-proxy-middleware": "^3.0.5",
+    "ngx-device-detector": "^10.0.2",
+    "ngx-ellipsis": "^5.0.4",
     "prettier": "^3.2.4",
     "qrcode": "^1.5.3",
     "rxjs": "~7.8.0",
@@ -47,16 +60,17 @@
     "tslib": "^2.3.0",
     "vite": "^6.2.3",
     "webpack": "^5.97.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.5",
-    "@angular/cli": "^19.2.5",
-    "@angular/compiler-cli": "^19.2.4",
+    "@angular-devkit/build-angular": "^20.2.14",
+    "@angular/cli": "^20.2.14",
+    "@angular/compiler-cli": "^20.2.14",
+    "@angular/language-service": "^20.2.14",
     "@types/jasmine": "~5.1.0",
     "@types/qrcode": "^1.5.5",
-    "jasmine-core": "~5.1.0",
     "esbuild": ">=0.25.0",
+    "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
